# fassung

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  prek.toml  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml
docs/: usage.md
docs/api_reference/: assembled_query.md  connection.md  cursor.md  cursor_factory.md  cursor_iterator.md  exceptions.md  listener.md  mapped_record.md  pool.md  query_assembler.md  transaction.md  transaction_status.md  type_parser.md
src/fassung/: __init__.py  connection.py  context.py  cursor.py  exceptions.py  pool.py  query_assembler.py  record.py  type_parser.py  types.py
tests/: conftest.py  models.py  test_cursor.py  test_fixtures.py  test_listeners.py  test_pool.py  test_query_assembler.py  test_transaction.py  test_type_parser.py
tests/examples/: test_crud.py
